--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -1,6 +1,6 @@
 %head
   %meta{ charset: 'utf-8' }
-  %title= @content_for_title || "apt2d"
+  %title= @content_for_title || "blog_app"
   -#%link{ href: 'images/favicon.ico', rel: 'short icon', type: 'image/x-icon' }
 
   = render partial: 'layouts/stylesheets'
