var changes and css"

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,9 +4,15 @@
     #loading{ style: 'display:none;' }
     #container
       / %header#header.clearfix= render partial: 'layouts/header'
-      #navigation= render partial: 'layouts/navigation'
-      #main.clearfix
-        #flashes
-        .content= yield
-        
+
+      #flashes
+      .container.home-container
+        .row
+          .sidebar.col-md-5.col-sm-12{:style =>"left: 0px;"}
+          .col-md-7.col-sm-12.col-md-offset-5.main-content
+            .nav
+              = link_to "Posts", "#posts", class: "select_posts active"
+              = link_to "Authors", "#authors", class: "select-categories"
+            .content
+              = yield
     = render partial: 'layouts/javascripts'
