--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2185,3 +2185,55 @@ html {
 .bs-example {
   margin-bottom: 20px;
 }
+
+.pagination {
+  color: #000;
+}
+
+.tags{
+  margin:0;
+  padding:0;
+  position: absolute;
+  list-style:none;
+  }
+
+  .tags li, .tags a{
+  float:left;
+  height:24px;
+  line-height:24px;
+  position:relative;
+  font-size:11px;
+  }
+
+  .tags a{
+  margin-left:20px;
+  padding:0 10px 0 12px;
+  background:#333337;
+  color:#fff;
+  text-decoration:none;
+  -moz-border-radius-bottomright:4px;
+  -webkit-border-bottom-right-radius:4px; 
+  border-bottom-right-radius:4px;
+  -moz-border-radius-topright:4px;
+  -webkit-border-top-right-radius:4px;  
+  border-top-right-radius:4px;
+/*  -moz-border-radius-bottomleft:4px;
+  -webkit-border-bottom-left-radius:4px; 
+  border-bottom-left-radius:4px;
+  -moz-border-radius-topleft:4px;
+  -webkit-border-top-left-radius:4px;  
+  border-top-left-radius:4px;  */ 
+  } 
+
+  .tags a:before{
+  content:"";
+  float:left;
+  position:absolute;
+  top:0;
+  left:-12px;
+  width:0;
+  height:0;
+  border-color:transparent #313538 transparent transparent;
+  border-style:solid;
+  border-width:12px 12px 12px 0;    
+  }
