--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
           .sidebar.col-md-5.col-sm-12{:style =>"left: 0px;"}
           .col-md-7.col-sm-12.col-md-offset-5.main-content
             .nav
-              = link_to "Posts", "#posts", class: "select_posts active"
+              = link_to "Posts", "#posts", class: "select_posts"
               = link_to "Authors", "#authors", class: "select-categories"
             .content
               = yield
