--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1298,7 +1298,7 @@ ol li {
 .post {
   height: auto;
   padding: 30px 0;
-  border-bottom: solid 1px whitesmoke;
+  /*border-bottom: solid 1px whitesmoke;*/
   overflow: hidden;
   *zoom: 1;
 }
@@ -1464,7 +1464,7 @@ ol li {
 /* line 30, ../sass/partials/_single.sass */
 hr {
   display: block;
-  width: 20%;
+  width: 100%;
   margin: 50px auto 40px auto;
   border: 1px solid #dededc;
 }
@@ -2193,7 +2193,7 @@ html {
 .tags{
   margin:0;
   padding:0;
-  position: absolute;
+
   list-style:none;
   }
 
